# r

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  skill_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark.py  results.json
config/: default.yaml
docker/: docker-compose.memory.yml  init-memory.sql
docs/: AGENT_OS.md  COMPLETE_GUIDE.md  DISTRIBUTED_AI.md  P2P_AGENTS.md  QUICKSTART.md  SECURITY_MODEL.md  troubleshooting.md
examples/: basic_usage.py  custom_skill.py
r_cli/: __init__.py  agent_os.py  diagnostics.py  main.py  mcp_client.py  observability.py  project_inspector.py  security.py  tool_runner.py  workflows.py
r_cli/api/: __init__.py  audit.py  auth.py  distributed_models.py  distributed_routes.py  models.py  p2p_models.py  p2p_routes.py  permissions.py  rate_limit.py  server.py
r_cli/api/static/: index.html
r_cli/api/static/assets/: index-_ueFFxra.js  index-_ueFFxra.js.map  index-lct-9yMF.css
r_cli/backends/: __init__.py  auto.py  base.py  mlx.py  ollama.py  openai_compat.py
r_cli/core/: __init__.py  agent.py  config.py  llm.py  memory.py  orchestrator.py  permissions.py  plugins.py  voice_interface.py
r_cli/distributed/: __init__.py  cluster.py  inference.py  partition.py
r_cli/p2p/: __init__.py  client.py  discovery.py  exceptions.py  peer.py  registry.py  security.py  sync.py
r_cli/skills/: __init__.py  agimemory_pg_skill.py  agimemory_skill.py  android_skill.py  archive_skill.py  audio_skill.py  barcode_skill.py  benchmark_skill.py  bluetooth_skill.py  calendar_skill.py  changelog_skill.py  clipboard_skill.py  code_skill.py  color_skill.py  cron_skill.py  crypto_skill.py  csv_skill.py  currency_skill.py  datetime_skill.py  design_skill.py  distributed_ai_skill.py  docker_skill.py  email_skill.py  encoding_skill.py  env_skill.py  faker_skill.py  fs_skill.py  git_skill.py  gpio_skill.py  html_skill.py  http_skill.py  hublab_skill.py  ical_skill.py  image_skill.py  imagegen_skill.py  ip_skill.py  json_skill.py  jwt_skill.py  latex_skill.py  logs_skill.py  (+38 more)
r_cli/tools/: __init__.py  file_utils.py  text_processing.py
r_cli/ui/: __init__.py  ps2_loader.py  terminal.py  themes.py
r_cli/web/: vite.config.ts
r_cli/web/src/: App.tsx  index.css
r_cli/web/src/api/: client.ts
r_cli/web/src/components/: Layout.tsx  VoiceButton.tsx
r_cli/web/src/pages/: Dashboard.tsx  Skills.tsx
r_cli/web/src/types/: index.ts
r_os/: README.md
r_os/android/: README.md
r_os/rpi/: README.md  install.sh  r-os.service
r_os/simulator/: __init__.py  __main__.py  app.py
sdks/javascript/: README.md  package.json  tsconfig.json
sdks/javascript/src/: client.ts  errors.ts  index.ts  types.ts
sdks/python/: README.md  pyproject.toml
sdks/python/r_sdk/: __init__.py  client.py  exceptions.py  types.py
sdks/python/tests/: test_sdk.py
services/: com.rcli.agent.plist  r-cli.service
tests/: __init__.py  conftest.py  test_agent_os.py  test_api.py  test_backends.py  test_cli.py  test_core.py  test_format_skills.py  test_integration.py  test_mcp.py  test_memory.py  test_observability.py  test_permissions.py  test_project_inspector.py  test_ros_skills.py  test_security.py  test_skills.py  test_social_skills.py  test_tool_runner.py  test_tools.py  test_utility_skills.py  test_workflows.py
