[project]
name = "r-cli-ai"
version = "0.1.0"
description = "R CLI - Your Local AI Operating System. 100% private, 100% offline, 100% yours."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ramón Guillamón", email = "learntouseai@gmail.com" }
]
keywords = [
    "ai", "cli", "agent", "local", "llm", "productivity",
    "offline", "private", "lm-studio", "ollama", "rag",
    "pdf", "sql", "code-generation", "voice", "whisper"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pypdf>=3.0.0",
    "fpdf2>=2.7.0",
    "python-docx>=1.0.0",
    "pandas>=2.0.0",
    "duckdb>=0.9.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/raym33/r"
Repository = "https://github.com/raym33/r"
Documentation = "https://github.com/raym33/r#readme"
Issues = "https://github.com/raym33/r/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
rag = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "chromadb>=0.4.0",
]
audio = [
    "faster-whisper>=0.10.0",
    "piper-tts>=1.0.0",
]
design = [
    "diffusers>=0.25.0",
    "torch>=2.0.0",
    "accelerate>=0.25.0",
]
ocr = [
    "pytesseract>=0.3.10",
]
web = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]
all = [
    "r-cli-ai[rag,audio,design,ocr,web]",
]

[project.scripts]
r = "r_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["r_cli"]

[tool.hatch.build.targets.sdist]
include = ["r_cli", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
