[project]
name = "r-cli-ai"
version = "0.1.0"
description = "R CLI - Your Local AI Operating System. 100% private, 100% offline, 100% yours."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ramón Guillamón", email = "learntouseai@gmail.com" }
]
keywords = [
    "ai", "cli", "agent", "local", "llm", "productivity",
    "offline", "private", "lm-studio", "ollama", "rag",
    "pdf", "sql", "code-generation", "voice", "whisper"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pypdf>=3.0.0",
    "fpdf2>=2.7.0",
    "python-docx>=1.0.0",
    "pandas>=2.0.0",
    "duckdb>=0.9.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/raym33/r"
Repository = "https://github.com/raym33/r"
Documentation = "https://github.com/raym33/r#readme"
Issues = "https://github.com/raym33/r/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
rag = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "chromadb>=0.4.0",
]
audio = [
    "faster-whisper>=0.10.0",
    "piper-tts>=1.0.0",
]
design = [
    "diffusers>=0.25.0",
    "torch>=2.0.0",
    "accelerate>=0.25.0",
]
ocr = [
    "pytesseract>=0.3.10",
]
all = [
    "r-cli-ai[rag,audio,design,ocr]",
]

[project.scripts]
r = "r_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["r_cli"]

[tool.hatch.build.targets.sdist]
include = ["r_cli", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "PLW2901",  # Loop variable overwritten
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["r_cli"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
