[project]
name = "r-cli-ai"
version = "0.3.0"
description = "R CLI - Your Local AI Operating System. 100% private, 100% offline, 100% yours."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ramón Guillamón", email = "learntouseai@gmail.com" }
]
keywords = [
    "ai", "cli", "agent", "local", "llm", "productivity",
    "offline", "private", "lm-studio", "ollama", "rag",
    "pdf", "sql", "code-generation", "voice", "whisper"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pypdf>=3.0.0",
    "fpdf2>=2.7.0",
    "python-docx>=1.0.0",
    "pandas>=2.0.0",
    "duckdb>=0.9.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",  # Para Ollama API
]

[project.urls]
Homepage = "https://github.com/raym33/r"
Repository = "https://github.com/raym33/r"
Documentation = "https://github.com/raym33/r#readme"
Issues = "https://github.com/raym33/r/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
rag = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "chromadb>=0.4.0",
]
audio = [
    "faster-whisper>=0.10.0",
    "piper-tts>=1.0.0",
]
design = [
    "diffusers>=0.25.0",
    "torch>=2.0.0",
    "accelerate>=0.25.0",
]
ocr = [
    "pytesseract>=0.3.10",
]
web = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]
translate = [
    "deep-translator>=1.11.0",
    "langdetect>=1.0.9",
]
json-tools = [
    "jmespath>=1.0.0",
    "jsonschema>=4.0.0",
]
mlx = [
    "mlx-lm>=0.10.0",
    "huggingface-hub>=0.20.0",
]
all = [
    "r-cli-ai[rag,audio,design,ocr,web,translate,json-tools]",
]
all-mac = [
    "r-cli-ai[all,mlx]",
]

[project.scripts]
r = "r_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["r_cli"]

[tool.hatch.build.targets.sdist]
include = ["r_cli", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    # Complexity
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "PLW2901",  # Loop variable overwritten
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "PLW0603",  # Global statement
    "C901",     # Function too complex
    # Unicode (intentional UI symbols)
    "RUF001",   # Ambiguous unicode
    "RUF002",   # Ambiguous unicode docstring
    "RUF003",   # Ambiguous unicode comment
    # Type annotations style (keep Optional for compatibility)
    "UP007",    # Use X | Y for Union
    "UP045",    # Use X | None
    # Common patterns
    "B008",     # Function call in default argument
    "B904",     # raise from err
    "B905",     # zip without strict
    "PLC0415",  # Import not at top level (lazy loading)
    "SIM105",   # contextlib.suppress
    "SIM108",   # Ternary operator
    "RET505",   # Unnecessary else after return
    "RET504",   # Unnecessary assignment before return
    "ARG001",   # Unused function argument
    "ARG002",   # Unused method argument
    # Pathlib (existing code uses os.path)
    "PTH100", "PTH101", "PTH103", "PTH107", "PTH108", "PTH109", "PTH110",
    "PTH111", "PTH112", "PTH113", "PTH118", "PTH119", "PTH120",
    "PTH122", "PTH123", "PTH202", "PTH201", "PTH207",
    # Unused variables
    "F841",
    # Datetime (existing code)
    "DTZ001", "DTZ002", "DTZ003", "DTZ005", "DTZ006", "DTZ007", "DTZ011",
    # Class attributes
    "RUF012",   # Mutable class attributes
    # Line length (handled separately)
    "E501",
    # Variable names (existing code style)
    "E741",     # Ambiguous variable name (l, O, I)
    # Loop control
    "B007",     # Loop variable not used
    # Style preferences (existing code)
    "PIE810",   # startswith/endswith tuple
    "SIM102",   # Nested if statements
    "RUF005",   # List concatenation vs unpacking
    "RUF059",   # Unused unpacked variable
    "PLR1714",  # Multiple comparisons
    "ERA001",   # Commented code
    "UP035",    # typing.Type deprecated
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004", "PLC0415", "E501", "S101", "F401", "F841"]
"r_cli/skills/*" = ["ARG001", "ARG002", "E501", "F401", "F841", "SIM116", "E721"]
"examples/*" = ["E501", "T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Permissive settings for existing codebase
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
no_implicit_optional = false
strict_optional = false
# Disable specific error codes
disable_error_code = [
    "assignment",
    "arg-type",
    "call-overload",
    "return-value",
    "var-annotated",
    "index",
    "attr-defined",
    "union-attr",
    "call-arg",
    "operator",
    "no-any-return",
    "misc",
]

[[tool.mypy.overrides]]
module = "r_cli.skills.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "r_cli.core.orchestrator"
ignore_errors = true

[[tool.mypy.overrides]]
module = "r_cli.core.plugins"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["r_cli"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
